# vendor_qcom_opensource_camera-kernel

./: Android.mk  BUILD.bazel  Kbuild  Kconfig  Makefile  Makefile.am  OWNERS  README.md  amethyst_defconfig  blair_gki_defconfig  board.mk  camera_modules.bzl  canoe_defconfig  dependency.mk  pineapple_consolidate_defconfig  pineapple_defconfig  pineapple_gki_defconfig  product.mk  project_defconfig.bzl  sun_defconfig  target_variants.bzl  volcano_defconfig
config/: camera_default.mk  cliffs.mk  kalama.mk  parrot.mk  pineapple.mk  pineapple_tuivm.mk  pitti.mk  volcano.mk
drivers/: Makefile  camera_main.c  camera_main.h
drivers/cam_cdm/: cam_cdm.h  cam_cdm_core_common.c  cam_cdm_core_common.h  cam_cdm_hw_core.c  cam_cdm_hw_reg_2_2.h  cam_cdm_intf.c  cam_cdm_intf_api.h  cam_cdm_soc.c  cam_cdm_util.c  cam_cdm_virtual_core.c
drivers/cam_core/: cam_context.c  cam_context.h  cam_context_utils.c  cam_context_utils.h  cam_hw_mgr_intf.h  cam_node.c  cam_subdev.c
drivers/cam_cpas/: cam_cpas_hw.c  cam_cpas_hw.h  cam_cpas_hw_intf.h  cam_cpas_intf.c  cam_cpas_soc.c  cam_cpas_soc.h
drivers/cam_cpas/camss_top/: cam_camsstop_hw.c
drivers/cam_cpas/cpas_top/: Makefile  cam_cpastop_hw.c  cam_cpastop_hw.h  cpastop100.h  cpastop_v1077_100.h  cpastop_v1080_100.h  cpastop_v150_100.h  cpastop_v165_100.h  cpastop_v170_110.h  cpastop_v170_200.h  cpastop_v175_100.h  cpastop_v175_101.h  cpastop_v175_120.h  cpastop_v175_130.h  cpastop_v346_100.h  cpastop_v480_100.h  cpastop_v480_custom.h  cpastop_v520_100.h  cpastop_v540_100.h  cpastop_v545_100.h  cpastop_v545_110.h  cpastop_v570_100.h  cpastop_v570_200.h  cpastop_v580_100.h  cpastop_v580_custom.h  cpastop_v640_200.h  cpastop_v665_100.h  cpastop_v680_100.h  cpastop_v680_110.h  cpastop_v770_100.h  cpastop_v780_100.h  cpastop_v860_100.h  cpastop_v880_100.h  cpastop_v970_110.h  cpastop_v975_100.h  cpastop_v980_100.h
drivers/cam_cpas/include/: cam_cpas_api.h
drivers/cam_cre/: cam_cre_context.c  cam_cre_dev.c
drivers/cam_cre/cam_cre_hw_mgr/: cam_cre_hw_mgr.c  cam_cre_hw_mgr.h
drivers/cam_cust/: cam_custom_context.c  cam_custom_dev.c
drivers/cam_fd/: cam_fd_context.c  cam_fd_dev.c
drivers/cam_icp/: cam_icp_context.c  cam_icp_subdev.c  hfi.c
drivers/cam_icp/fw_inc/: hfi_intf.h  (+3 more)
drivers/cam_isp/: cam_isp_context.c  cam_isp_context.h  cam_isp_dev.c
drivers/cam_jpeg/: cam_jpeg_context.c  cam_jpeg_dev.c
drivers/cam_log/: cam_log.c  cam_log.h
drivers/cam_lrme/: cam_lrme_context.c  cam_lrme_dev.c
drivers/cam_msger/: README  cam_binder.c  cam_binder.h  cam_mm.c  cam_mm.h  cam_msger.c  cam_msger.h  cam_msger_common.c  cam_msger_common.h  cam_pid.c  cam_pid.h  cam_sched.c  cam_sched.h
drivers/cam_ope/: cam_ope_context.c  cam_ope_subdev.c
drivers/cam_req_mgr/: cam_mem_mgr.c  cam_mem_mgr.h  cam_mem_mgr_api.h  cam_req_mgr_core.c  cam_req_mgr_core.h  cam_req_mgr_debug.c  cam_req_mgr_debug.h  cam_req_mgr_dev.c  cam_req_mgr_dev.h  cam_req_mgr_interface.h  cam_req_mgr_util.c  cam_req_mgr_util.h  cam_req_mgr_workq.c  cam_subdev.h
drivers/cam_sensor_module/: cam_sensor_module_debug.c
drivers/cam_smmu/: Makefile  cam_smmu_api.c  cam_smmu_api.h
drivers/cam_sync/: Makefile  cam_sync.c  cam_sync_api.h  cam_sync_dma_fence.c  cam_sync_private.h  cam_sync_synx.c  cam_sync_synx.h  cam_sync_util.c  cam_sync_util.h
drivers/cam_utils/: cam_common_util.c  cam_common_util.h  cam_compat.c  cam_compat.h  cam_debug_util.c  cam_debug_util.h  cam_dump_util.c  cam_dump_util.h  cam_io_util.c  cam_io_util.h  cam_packet_util.c  cam_packet_util.h  cam_soc_bus.c  cam_soc_bus.h  cam_soc_icc.c  cam_soc_util.c  cam_soc_util.h  cam_trace.h  cam_wr_bus_common_query_v1.h
drivers/cam_vmrm/: cam_inter_vm_comms.h  cam_inter_vm_comms_data.h  cam_vmrm.c  cam_vmrm.h  cam_vmrm_gh_wrapper.c  cam_vmrm_gh_wrapper.h  cam_vmrm_interface.c  cam_vmrm_interface.h  cam_vmrm_msg_handler.h
drivers/mi_cam/: mi_cam.c  mi_cam.h  mi_cam_trace.h
drivers/wl2866d/: wl2866d.c  wl2866d.h
dt-bindings/: msm-camera.h
(+358 files in other folders)
